# stm32h735g-dk-embassy-blinky

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
