[package]
name = "stm32h735g-dk-embassy-blinky"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.3" }

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999", features = [
    "defmt",
    "stm32h735ig",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999", features = [
    "defmt",
] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999" }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "7473999" }

[profile.release]
debug = true    # required for decent panic messages
opt-level = "s"
lto = "thin"
